# phase

./: Cargo.toml  README.md  Tiltfile
.claude/skills/bug-triage/: SKILL.md
.claude/skills/card-test/: SKILL.md
.githooks/: pre-push
.github/workflows/: ci.yml  deploy.yml  release.yml
client/: package.json
client/public/feeds/: mtggoldfish-commander.json  mtggoldfish-modern.json  mtggoldfish-pioneer.json  mtggoldfish-standard.json
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src/adapter/: types.ts
client/src/game/: waitingForRegistry.ts
client/src/hooks/: useIsMobile.ts
client/src/pages/: DraftPodPage.tsx  GamePage.tsx
client/src/providers/: GameProvider.tsx
client/src/services/: deckParser.ts
client/src/stores/: gameStore.ts  preferencesStore.ts  uiStore.ts
client/src/utils/: combat.ts
crates/server-core/: Cargo.toml
crates/server-core/src/: client_message_wire_guard.rs  draft_wire_guard.rs  game_action_payload_guard.rs  game_state_snapshot_wire_guard.rs  lib.rs  lobby.rs  protocol.rs  session.rs
crates/server-core/tests/: lobby_wire_contract.rs
data/: engine-inventory.json
deploy/: card-bot-push.sh  card-bot.Dockerfile  deploy.sh  phase-server.nginx.conf  push.sh
docs/: AI-CONTRIBUTOR.md
scripts/: gen-scryfall-images.sh  gen-scryfall-printings.sh  gen-scryfall-sets.sh  gen-scryfall-token-images.sh  sync-bug-reports.ts
scripts/card-bot/: config.ts  coverageData.ts  discord.ts  index.ts  manaEmoji.json  register.ts  render.ts  scryfall.ts  smoke.ts  upload-emoji.ts
scripts/lib/: scryfall-fetch.sh
(+255 files in other folders)
